# ir_measures

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml  docs.yaml  docs.yml  publish-to-pypi.yml  push.yml  style.yml  test.yml
docs/: CNAME  advanced.rst  api.rst  conf.py  getting-started.rst  index.md  index.rst  measures.rst  providers.rst  requirements.txt
docs/_static/: main.css
examples/: demo.ipynb
ir_measures/: __init__.py  __main__.py  generate_docs.py  lazylibs.py  util.py
ir_measures/measures/: __init__.py  accuracy.py  ap.py  base.py  bpm.py  bpref.py  compat.py  diversity.py  err.py  fairness.py  infap.py  inst.py  iprec.py  judged.py  ndcg.py  nerr.py  numq.py  numrel.py  numret.py  p.py  r.py  rbp.py  rprec.py  rr.py  sdcg.py  set_measures.py  setp.py  success.py
ir_measures/providers/: __init__.py  accuracy_provider.py  base.py  compat_provider.py  cwl_eval.py  fairness.py  fallback_provider.py  gdeval_provider.py  judged_provider.py  msmarco_provider.py  py_ndeval_provider.py  (+5 more)
test/: base.py  compat.qrels  compat.run  cwl.run  test_accuracy.py  test_aggregate.py  test_compat.py  test_convert_trec_name.py  test_gdeval.py  test_judged.py  test_measures.py  test_providers.py  test_py_ndeval.py  test_pyndeval.py  test_pytrec_eval.py  test_ranx.py  test_runtime.py  test_util.py
tests/: base.py  cwl.qrels  test_cwl_eval.py  test_measures.py  test_pyndeval.py  test_pytrec_eval.py  test_runtime.py  test_util.py
